--- a/listaCompra/compra.css
+++ b/listaCompra/compra.css
@@ -2,33 +2,54 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid violet;
-  background-image: url('./img/fondoTransparente.png');
-  margin-left: 10%;
-  margin-right: 10%;
+  border: 10px solid violet;
+  background-color: lightgrey;
+  margin: 0 10%;
 }
 
 #articulos {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  margin-left: 10%;
-  margin-right: 10%;
+  margin: 0 10%;
 }
 
 #articulos div {
-  display: inline;
-  width: fit-content;
+  display: inline-flex;
+
   padding: 10px;
-  background-color: white;
-  border: 3px solid black;
+  background-color: rgba(50, 0, 0, 0.8);
+  color: aliceblue;
+  border: 3px solid rebeccapurple;
   transition: padding 1s;
+  overflow: hidden;
 }
 
 #articulos div:hover {
   padding: 1.5em;
 }
 
+h1,
+h3,
+label {
+  color: aliceblue;
+  background-color: rgba(50, 0, 0, 0.8);
+  border: 5px solid rebeccapurple;
+  padding: 10px;
+}
+
+#filter {
+  margin: 10px;
+}
+
+img {
+  width: 150px;
+  height: auto;
+}
+
+button {
+  max-width: 50px;
+}
 .oculto {
   display: none;
 }
